# automotive-fuzzing-example-cpp

./: .bazelrc  BUILD.bazel  CMakeLists.txt  CMakePresets.json  README.md  WORKSPACE  another_fuzz_test.cpp  approach1.cpp  approach2.cpp  approach3.cpp  approach4DNW.cpp  approach5DNW.cpp  build.sh  build_bundle.sh  bundle.sh  cifuzz.yaml  cifuzz_wrapper.sh  clean.sh  defs.bzl  my_fuzz_test.cpp  my_fuzz_test_1.cpp  my_fuzz_test_1.h  my_fuzz_test_2.cpp  my_fuzz_test_3.cpp  set_env_vars.sh
.code-intelligence/: README.md  build.sh  project.yaml
.code-intelligence/fuzz_targets/: API_fuzz_test.cpp.yaml  Unit_test.sh  Unit_test.sh.yaml  my_first_test.cpp  my_first_test.cpp.yaml
.code-intelligence/prepared/: mocklib.cpp  testgen_template.xlsx
.github/workflows/: main.yml
cmake_integration/: CMakeLists.txt
fuzzing/: StandaloneFuzzTargetMain.cpp  coverage_report.sh  create_alias.sh  create_artifact.sh  create_llvm_cov_target.sh  create_llvm_target.sh  create_mock_template.sh  filter.txt  filter_compile_commands.py  my_fuzz_test_1.cpp  start_fuzzing_run_on_server.sh  testgen_template.xlsx
fuzzing/auto-mock-fuzz/: gen_tests.py
fuzzing/auto-mock-fuzz/gen_template/: gen_template.py
fuzzing/fuzz_test/: My_First_Fuzz_Test.cpp  my_fuzz_test_1.cpp  my_fuzz_test_2.cpp
modules/: check.cpp  check.h  parser.cpp  parser.h  target.cpp  target.h
modules/GPS_module/src/: GPS_module_1.cpp  GPS_module_1.h
modules/crypto_module/src/: crypto_module_1.cpp  crypto_module_1.h
modules/key_management_module/src/: key_management_module_1.cpp  key_management_module_1.h
modules/time_module/src/: time_module_1.cpp  time_module_1.h
test/: simple_unit_test.cpp
