load("@rules_cc//cc:defs.bzl", "cc_library")


cc_library(
    name = "AUTOMOTIVE-FUZZING-EXAMPLE-CPP",
    srcs = [
        "modules/target.cpp"
    ],
    hdrs = [
        "modules/target.h"
    ],
    includes = [
        "modules/"
    ],
    visibility = ["//visibility:public"]
)

load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

cc_fuzz_test(
    name = "my_fuzz_test_1",
    srcs = ["my_fuzz_test_1.cpp"],
    corpus = glob(
        ["my_fuzz_test_1_inputs/**"],
        allow_empty = True,
    ),
    deps = [
        "@cifuzz",
        ":AUTOMOTIVE-FUZZING-EXAMPLE-CPP"
    ]
)
